samples/_failures_safe/1761489119_4d37bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9c82274.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_f9c82274.c:149:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  149 |     uint32_t sample_count
      |     ^~~~~~~~
./samples/SAFE/__tmp_f9c82274.c:149:5: error: expected declaration or statement at end of input
